public/css/app.css
/* ... */
.product-category {
    width: 250px;
    margin-top: 10px;

    font-family: Montserrat;
    font-style: normal;
    font-weight: 500;
    font-size: 16px;
    line-height: 21px;
    /* or 129% */

    letter-spacing: -0.540636px;

    color: #787A7D;
}

.old-price {
    width: 108.24px;
    height: 35.24px;

    margin-top: 10px;


    font-family: Montserrat;
    font-style: normal;
    font-weight: 500;
    font-size: 14px;
    line-height: 27px;
    /* or 194% */

    letter-spacing: -0.540636px;
    text-decoration-line: line-through;

    color: #43637A;
}

.new-price {
    width: 108.24px;
    height: 26.43px;

    font-family: Montserrat;
    font-style: normal;
    font-weight: 600;
    font-size: 20px;
    line-height: 3px;
    /* or 136% */

    letter-spacing: -0.540636px;

    color: #FF3B37;
}

.add-to-cart {
    position: absolute;
    right: 0;
    bottom: 0;
    width: 54.19px;
    height: 54.19px;
    border: none;
    background: #E3EDF7;
    border-radius: 50%;
    box-shadow: -1px -1px 1px #FFFFFF, 0px 4px 4px rgba(38, 149, 151, 0.25), 1px 1px 1px #269597,-2px -2px 2px rgba(255, 255, 255, 0.7), 2px 2px 2px rgba(93, 148, 204, 0.25), inset 1px 1px 3px rgba(93, 148, 204, 0.25), inset -1px -1px 3px rgba(255, 255, 255, 0.8);
}

.favorite {
    position: absolute;
    margin-left: 25px;
    width: 47.53px;
    height: 64.16px;

    background: #EDF4FC;
    box-shadow: 0px 2px 2px rgba(93, 148, 204, 0.22);
    border-radius: 0px 0px 19.5px 19.5px;
}

.fav-image {
    width: 31px;
    height: 26px;
    margin-left: 8px;
    margin-top: 30px;
}

.product-img {
    display: flex;
    justify-content: center;
    max-width: 100%;
    align-items: center;
    height: 100%;
}

.carousel-indicators li {
    width: 15px;
    height: 15px;
    border-radius: 100%;
}

.almarket-word {
    width: 609px;
    height: 140px;

    margin-left: 17px;

    font-family: Montserrat;
    font-style: normal;
    font-weight: bold;
    font-size: 35px;
    line-height: 43px;
    display: flex;
    align-items: center;
    text-transform: uppercase;

    color: #2CD4B3;
}

.banner-text-one {
    width: 443px;
    height: 120px;

    margin-left: 17px;


    font-family: Montserrat;
    font-style: normal;
    font-weight: normal;
    font-size: 25px;
    line-height: 30px;
    display: flex;
    align-items: center;

    color: #43637A;
}

.banner-text-two {
    width: 450px;
    height: 100px;

    margin-left: 17px;


    font-family: Montserrat;
    font-style: normal;
    font-weight: normal;
    font-size: 25px;
    line-height: 30px;
    display: flex;
    align-items: center;

    color: #43637A;
}

.banner-button {
    margin-left: 17px;

    width: 388px;
    height: 71px;

    line-height: 30px;

    background: #5CDCC5;
    border-radius: 20px;
}

.banner-button-text {

    font-family: Montserrat;
    font-style: normal;
    font-weight: 700;
    font-size: 25px;
    line-height: 30px;
    display: flex;
    align-items: center;
    text-align: center;
    justify-content: center;
    text-transform: uppercase;

    color: #43637A;
}

.partner-heading {
    font-family: Montserrat;
    font-style: normal;
    font-weight: 500;
    font-size: 30px;
    line-height: 37px;
    /* identical to box height */

    display: flex;
    align-items: center;
    text-align: center;
    text-transform: uppercase;

    color: #7888A2;

    text-shadow: -4px -4px 4px rgba(255, 255, 255, 0.8), 3px 3px 4px #8FACC1;
}


.bread {

    height: 18px;

    margin-left: 30px;


    font-family: Montserrat;
    font-style: normal;
    font-weight: 500;
    font-size: 15px;
    line-height: 18px;
    display: flex;
    align-items: center;
    text-transform: uppercase;

    color: #7791A4;
}

.home-banner {
    width: 1107px;
    height: 141px;

    margin-top: 30px;
    margin-left: 160px;


    background: url(/images/home-banner.png);
    border-radius: 22px;
}

.benefits {
    width: 269px;
    height: 40px;
    margin-top: 18px;
    font-family: Montserrat;
    font-style: normal;
    font-weight: bold !important;
    font-size: 33px;
    line-height: 40px;
    display: flex;
    align-items: center;
    text-align: center;
    font-variant: small-caps;

    color: #015543;
}

.benefits-description {
    width: 963px;
    height: 120px;
    left: 90px;
    top: 593px;
    margin-top: 30px;
    margin-bottom: 30px;

    font-family: Montserrat;
    font-style: normal;
    font-weight: normal;
    font-size: 25px;
    line-height: 30px;
    display: flex;
    align-items: center;

    color: #405666;
}

.forms form {
    padding: 30px;
}

#signup {
    display: none;
}

#signup-next {
    display: none;
}

.forms .tab-group {
    list-style: none;
    padding: 0;
    margin: 0;
}

.forms .tab-group:after {
    content: "";
    display: table;
    clear: both;
}

.signIn {
    width: 245px;
    position: relative;
    height: 89px;
    background: #E3EDF7;
    border-radius: 10px 0px 0px 0px;
}

.signUp {
    margin-left: -8px;
    position: relative;
    width: 253px;
    height: 89px;
    z-index: 10;
    background: #AFC5DB;
    border-radius: 0px 10px 0px 10px;
}

.login-btn-text {
    text-decoration: none;
    font-family: Montserrat;
    font-style: normal;
    font-weight: bold;
    font-size: 24px;
    line-height: 29px;
    align-items: center;
    text-align: right;
    text-transform: uppercase;

    color: #637E99;
}

.login-subtext {
    font-family: Montserrat;
    font-style: normal;
    font-weight: normal;
    font-size: 11px;
    line-height: 27px;
    /* or 247% */

    text-align: center;
    letter-spacing: -0.540636px;

    color: #637E99;
}

.signUp-btn-text {
    text-decoration: none;
    font-family: Montserrat;
    font-style: normal;
    font-weight: bold;
    font-size: 24px;
    line-height: 29px;
    align-items: center;
    text-align: center;
    text-transform: uppercase;

    color: #FFFFFF;
}
/* ... */

